edited blog posts, blog styling with description, about filler text, and fixed dark mode on aayushs extensions

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@ body,
   height: 100%;
 }
 
+body {
+  background-color: transparent;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
